registro de menu

--- a/ADMIN/Content/Site.css
+++ b/ADMIN/Content/Site.css
@@ -1,7 +1,9 @@
 ﻿body {
     padding-bottom: 20px;
 }
-
+.container{
+    margin-top:70px;
+}
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
