--- a/ADMIN/Content/Site.css
+++ b/ADMIN/Content/Site.css
@@ -6,8 +6,9 @@
 }
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    margin-top: 70px;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
